[package]
name = "qrc-opensource-rs"
version = "0.2.1"
authors = ["Quantum Resistant Cryptography (QRC)"]
edition = "2021"
description = "The free opensource version of the Quantum Secure Cryptographic library in Rust (QSC)"
homepage = "https://www.qrcrypto.ch/"
documentation = "https://docs.rs/qrc-opensource-rs"
repository = "https://github.com/Quantum-Resistant-Cryptography/qrc-opensource-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["cryptography", "quantum", "post-quantum", "rust"]
categories = ["cryptography"]

[lib]
name = "qrc_opensource_rs"
path = "src/lib.rs"

[dependencies]
bytemuck = "1.16.0"
whoami = "1.5.1"
sysinfo = "0.30.12"
rand = "0.8.5"
chrono = "0.4.38"
