[package]
name = "qrc-opensource-rs"
version = "0.3.2"
authors = ["Quantum Resistant Cryptography (QRC)", "opensource-support@qrcrypto.ch"]
edition = "2024"
description = "The free opensource version of the Quantum Secure Cryptographic library in Rust (QRC)"
documentation = "https://docs.rs/qrc-opensource-rs"
readme = "README.md"
homepage = "https://www.qrcrypto.ch/"
repository = "https://github.com/Quantum-Resistant-Cryptography/qrc-opensource-rs"
license-file = "LICENSE"
keywords = ["cryptography", "quantum", "post-quantum", "rust"]
categories = ["cryptography"]
exclude = ["/target","/Cargo.lock","src/asymmetric/cipher/ecdhbody","src/asymmetric/cipher/ecdh.rs","src/asymmetric/signature/dilithiumbody","src/asymmetric/signature/ecdsabody","src/asymmetric/signature/falconbody"]

[lib]
name = "qrc_opensource_rs"
path = "src/lib.rs"

[features]
all-tools = ["var-tools", "sys-tools"]

var-tools = ["intutils", "memutils", "stringutils", "sysutils", "whoami", "sysinfo", "chrono"]
var-tools-no_std = ["no_std", "intutils", "memutils", "sysutils"]
sys-tools = ["consoleutils", "fileutils", "folderutils"]

consoleutils = ["crossterm", "rpassword"]
fileutils = []
folderutils = ["directories"]
intutils = []
memutils = []
stringutils = []
sysutils = []

no_std = []
std = ["whoami", "sysinfo", "chrono", "unicode-segmentation", "rand"]

default = ["std"]

[dependencies]
zeroize = "1.8.1"

# Non no_std features
whoami = { version = "1.5.1", optional = true }
sysinfo = { version = "0.30.12", optional = true }
chrono = { version = "0.4.38", optional = true }
unicode-segmentation = { version = "1.11.0", optional = true }
rand = { version = "0.8.5", optional = true }

# System tool features
rpassword = { version = "7.3.1", optional = true }
crossterm = { version = "0.29.0", optional = true }
directories = { version = "6.0.0", optional = true }